Simple crud view example 	modified:   app/index.html 	modified:   app/scripts/app.js 	modified:   app/scripts/controllers/account.js 	modified:   app/scripts/controllers/expense.js 	modified:   app/scripts/services/expense.js 	modified:   app/views/account.html 	modified:   app/views/expense.html

--- a/app/views/account.html
+++ b/app/views/account.html
@@ -1,1 +1,8 @@
-<p>This is the account view.</p>
+<h1>Expenses</h1>
+<div class="list-group">
+    <a href="#/expense/{{expense.id}}" class="list-group-item" ng-repeat="expense in expenses">
+        <span class="badge">{{expense.amount}}</span>
+        <emphasis>{{expense.date}}</emphasis>
+        <p>{{expense.memo}}</p>
+    </a>
+</div>
