--- a/app/views/expense.html
+++ b/app/views/expense.html
@@ -21,7 +21,7 @@
                 <div class="form-group">
                     <div class="">
                         <p class="input-group">
-                            <input required placeholder="Date" type="text" class="form-control input-md" datepicker-popup="{{format}}" ng-model="expense.date" is-open="opened" min-date="minDate" max-date="'2015-06-22'" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" />
+                            <input required placeholder="Date" type="text" class="form-control input-md" datepicker-popup="{{format}}" ng-model="expense.date" is-open="opened" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" />
                             <span class="input-group-btn">
                 <button type="button" class="btn btn-default" ng-click="open($event)"><i class="glyphicon glyphicon-calendar"></i></button>
               </span>
